--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ owner:
   name: Zac Clay
   email: zacclay@gmail.com
   twitter: mebezac
+  github: mebezac
   google:
     ad-client:
     ad-slot:
