--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,9 @@ locale:
 sass:
     sass_dir: _sass
     style: compressed
-permalink: date
+permalink: pretty
+paginate: 5
+paginate_path: "blog/:num/"
 markdown: kramdown
 highlighter: pygments
 gems:
